# shakespearean_pokemon

./: Cargo.toml  dockerfile  readme.md
.github/workflows/: ci.yml  dockerpublish.yml
src/: main.rs
src/client/: client_error.rs  mod.rs  pokemon_client.rs  shakespeare_client.rs  translation_client.rs
src/routes/: mod.rs  pokemon.rs  translated.rs
