[package]
name = "shakespearean_pokemon"
version = "0.1.0"
authors = ["Jonathan Donaldson <jdonaldson278@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = {version ="1.0.124", features=["serde_derive"]}
surf = "2.1.0"
tokio = {version = "1.2.0", features =["full"]}
serde_json = "1.0.64"


[dev-dependencies]
wiremock = "0.5"
